--- a/src/app/kinologs/kinologs.component.html
+++ b/src/app/kinologs/kinologs.component.html
@@ -1,2 +1,2 @@
-<h1>Дарова старость, тут ты можешь найти кинолога для своей псины</h1>
+<h1>Здесь вы можете найти кинолога в Москве:</h1>
 <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A413275a1225152e481e76ab800851e77c7a6a178201543135ba4b7edbe6aac51&amp;source=constructor" width="100%" height="700" frameborder="0"></iframe>
