--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
-<h1>WELCOME</h1>
-<nav>
-    <ul class="menu">   
-        <a routerLink="/home" routerLinkActive="active">Главная</a>
-        <a routerLink="/infa" routerLinkActive="active">Информация</a>
-        <a routerLink="/kinologs" routerLinkActive="active">Кинологи</a>
-        <a routerLink="/chat" routerLinkActive="active">Чат</a>
-    </ul>
-</nav>
-<router-outlet></router-outlet>
-<router-outlet></router-outlet>
+<nav class="top-menu">
+  <ul class="menu-main">
+  <li><a routerLink="/home"  routerLinkActive="active">Главная</a>
+  <a routerLink="/infa" routerLinkActive="active">Информация</a>
+  
+  <a routerLink="/kinologs" routerLinkActive="active">Кинологи</a>
+  <a routerLink="/chat" routerLinkActive="active">Чат</a>
+  </ul>
+  </nav>
+  <router-outlet></router-outlet>
+  <router-outlet></router-outlet>
