--- a/src/app/chat/chat.component.css
+++ b/src/app/chat/chat.component.css
@@ -1,56 +1,67 @@
+<div id="wrapper">
 
+
+<div id="chatbox"></div>
+
+<form name="message" action="">
+<input name="usermsg" type="text" id="usermsg" size="63" />
+<input name="submitmsg" type="submit" id="submitmsg"
+value="Отправить" />
+<input type="reset" value="Сбросить" />
+</form>
+</div>
 body {
-	font:12px arial;
-	color: #222;
-	text-align:center;
-	padding:35px; }
- 
+font:15px arial;
+color: rgb(5, 5, 5);
+text-align:center;
+padding:100px; }
+
 form, p, span {
-	margin:0;
-	padding:0; }
- 
+margin:0;
+padding:0; }
+
 input { font:12px arial; }
- 
+
 a {
-	color:#0000FF;
-	text-decoration:none; }
- 
-	a:hover { text-decoration:underline; }
- 
+color:#0000FF;
+text-decoration:none; }
+
+a:hover { text-decoration:underline; }
+
 #wrapper, #loginform {
-	margin:0 auto;
-	padding-bottom:25px;
-	background:#EBF4FB;
-	width:504px;
-	border:2px solid #ACD8F0; }
- 
+margin:0 auto;
+padding-bottom:25px;
+background:#70a2bd;
+width:550px;
+border:2px solid #1d7aac; }
+
 #loginform { padding-top:180px; }
- 
-	#loginform p { margin: 5px; }
- 
+
+#loginform p { margin: 5px; }
+
 #chatbox {
-	text-align:left;
-	margin:0 auto;
-	margin-bottom:25px;
-	padding:10px;
-	background:#fff;
-	height:270px;
-	width:430px;
-	border:1px solid #ACD8F0;
-	overflow:auto; }
- 
+text-align:left;
+margin:0 auto;
+margin-bottom:25px;
+padding:10px;
+background:#fff;
+height:270px;
+width:430px;
+border:1px solid #1d7aac;
+overflow:auto; }
+
 #usermsg {
-	width:395px;
-	border:1px solid #ACD8F0; }
- 
+width:395px;
+border:1px solid #1d7aac; }
+
 #submit { width: 60px; }
- 
+
 .error { color: #ff0000; }
- 
+
 #menu { padding:12.5px 25px 12.5px 25px; }
- 
+
 .welcome { float:left; }
- 
+
 .logout { float:right; }
- 
+
 .msgln { margin:0 0 2px 0; }
